core: set up of a standard formatter
`checkstyle` is not enough for a few reasons:
- it doesn't provide anything to format (from command line for example)
- different format, even pretty esoteric, might pass the `checkstyle`
- programmers won't even agree on which of the different format should be adopted on each or each other case

Google formatter is pretty standard one, I already used it and had never the need to think about it anymore...
which should be the whole purpose of a formatter.

https://medium.com/@ryconoclast/why-you-should-use-a-code-formatter-4f02dd40db14